--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-route.js" type="text/javascript"></script>
-	
 	<script type="text/javascript" src="js/build/ng-tags-input.js"></script>
-		
 	<script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
 	<script src="js/build/main.js" type="text/javascript"></script>
 	<title></title>
@@ -15,16 +12,19 @@
 	<link rel="stylesheet" href="css/build/ng-tags-input.min.css">  
 </head>
 <body ng-app="ProRubric">
- <div id="sideNav">
-	<ul>
-		<li><a href="#" class="logo">Pro Rubrics</a></li>
-		<li><img src="http://i.imgur.com/z1gsYeg.png" class="navIcons"><a href="#">Search</a></li>
-		<li><a href="#">Degree</a></li>
-		<li><a href="#">Class</a></li>
-	</ul>
-</div>
-<div ng-view class='mainDefaultBody'>
-	{{{ body }}}
-</div>
+	 
+ 	<div class="header">
+ 		<div class="logo">
+	 		<a href="#"> Pro Rubrics </a>
+	 	</div>
+	 		
+	 	<div class='navigation'>
+			<li><a href="#">Search</a></li>
+			<li><a href="#">Degree</a></li>
+			<li><a href="#">Class</a></li>
+		</div>
+	</div>
+
+		{{{ body }}}
 </body>
 </html>
