--- a/assets/views/dashboard.html
+++ b/assets/views/dashboard.html
@@ -1,14 +1,19 @@
 <div ng-contoller='dashboardController'>
     
     <gen-form data-payload="dashboardFormData" data-callback="actionAdd()"></gen-form>
-    
-    
-    <div ng-repeat="x in degreeView" class="repeatContent">
-        <ul>
-            <li class="rubricTitle">{[{x.title}]}</li>
-            <li class="rubricAcronym">{[{x.acronym}]}</li>
-            <li><a href="#/degree/update/{[{x._id}]}">Edit</a></li>
-        </ul>
-        <button ng-click="degreeDelete(x._id)">Delete Degree</button>
+
+    <div>
+        <div ng-repeat="x in degreeView" class="repeatContent">
+            <h2 class="rubricAcronym">{[{x.acronym}]}</h2>
+            <h4 class="rubricTitle">{[{x.title}]}</h4>
+            <a href="#/degree/update/{[{x._id}]}">Edit</a>
+            <!--<ul>-->
+            <!--    <li class="rubricAcronym">{[{x.acronym}]}</li>-->
+            <!--    <li class="rubricTitle">{[{x.title}]}</li>-->
+            <!--    <li><a href="#/degree/update/{[{x._id}]}">Edit</a></li>-->
+            <!--</ul>-->
+            <button ng-click="degreeDelete(x._id)">Delete Degree</button>
+        </div>
     </div>
+    
 </div>
