--- a/assets/views/rubric.html
+++ b/assets/views/rubric.html
@@ -2,14 +2,13 @@
     
     <gen-form data-payload="rubricFormData" data-callback="actionAdd()"></gen-form>
     
-    <div ng-repeat="x in rubricView" class="repeatContent">
+    <div ng-repeat="x in rubricView track by $index" class="repeatContent">
         <ul>
-            <li></li>
+            <li>{[{x._id}]}</li>
             <li>{[{x.title}]}</li>
-            <li>{[{x.acronym}]}</li>
-            <li>{[{x.description}]}</li>
-            <li><a href="#/rubric/update/{[{x._id}]}">Edit</a></li>
-            <li><button ng-click="rubricDelete(x._id)">Delete Rubric</button></li>
+            <li>{[{x.sections}]}</li>
+            <li>{[{x.gradeTiers[$index]}]}</li>
+            <li>{[{x.parentId}]}</li>
         </ul>
     </div>
 </div>
