--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -9,8 +9,8 @@ lightColor = #FBF7E4
 primaryFont = 'futura'
 secondaryFont = 'baskerville Old Face'
 
-edit()
-
+body
+    margin 0
 
 //MAIN STYLING
 .header
@@ -95,15 +95,17 @@ edit()
     
     
 // REPEATING DIVS
-.repeatContent 
-    col(1/3, cycle:3)
-    background mainColor
+.repeatContent
+    col(1/3)
+    width 33%
+    display inline-block
     position relative
+    background mainColor
     top 100px
     margin-bottom 2%
     +below(800px)
-    stack()
-    
+        stack()
+        
     h2
         col(1/1)
         color white
@@ -112,27 +114,14 @@ edit()
         col(1/1)
         font-size 1em
         color white
-        list-style-type none
         margin-top 0
-    a
-        col(1/4)
-        font-size 1.3em
-        text-decoration underline
-        text-align right
-        color white
-    button
-        col(1/3)
-        shift(1/3)
-        font-size 2em
-        font-family 'futura'
-        text-align center
-        background secondaryColor
-        color white
-        border none
-        border-bottom 3px darkColor solid
-        border-radius 5px
-        padding 2% 0
-        font-size 1em
+    // a
+    //     font-size 1.3em
+    //     text-align right
+    //     color white
+    //     text-decoration none
+        
+   
         
 .rubricTitle
     font-family primaryFont
