--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -19,9 +19,11 @@
 	 	</div>
 	 		
 	 	<div class='navigation'>
-			<li><a href="#">Search</a></li>
-			<li><a href="#">Degree</a></li>
-			<li><a href="#">Class</a></li>
+			<ul>
+				<li><a href="#">Degree</a></li>
+				<li><a href="#">Class</a></li>
+				<li class='search'><input type="search" ng-model="q" aria-label="filter degrees" placeholder='Search' /></li>
+			</ul>
 		</div>
 	</div>
 
