--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -9,8 +9,14 @@ lightColor = #FBF7E4
 primaryFont = 'futura'
 secondaryFont = 'baskerville Old Face'
 
+edit()
+
 body
-    margin 0
+    margin 0 1%
+    
+html
+    +below(800px)
+        background red
 
 //MAIN STYLING
 .header
@@ -31,103 +37,118 @@ body
 .navigation
     col(1/2)
     background mainColor
-
-    ul
-        padding-left 0
     
     li
+        col(1/3)
         list-style-type none
+        color white
+        font-family primaryFont
+        margin-right 0px
     
     a
-        col(1/3)
-        padding 2% 0
         color white
         font-family primaryFont
         text-decoration none
         text-align center
         font-size 1em
-     
+        
+    input
+        margin-left 0px
+        
+    ul
+        col(1/1)
+        margin 0px
+    
 
 
 // GENERATED FORM STYLING
 .form
-    center(500px)
-    position relative
-    top 90px
-    padding 2%
-    background #E7E8D1
-    border 1px #D3CEAA solid
-    border-radius 5px
+  center(500px)
+  position relative
+  top 90px
+  padding 2%
+  background #E7E8D1
+  border 1px #D3CEAA solid
+  border-radius 5px
 
-    h1
-        col(1/1)
-        margin-top 0
-        font-family 'futura'
-        color mainColor
-        font-weight 100
-        font-size 2em
+  h1
+    col(1/1)
+    margin-top 0
+    font-family 'futura'
+    color mainColor
+    font-weight 100
+    font-size 2em
   
-    label
-        col(1/1)
-        font-family 'futura'
+  label
+    col(1/1)
+    font-family 'futura'
   
-    input
-        width 96%
-        padding 3% 2%
-        background white
-        border none
-        font-family 'baskerville Old Face'
-        font-size 1.2em
-        margin-top 2%
-        margin-bottom 5%
+  input
+    width 96%
+    padding 3% 2%
+    background white
+    border none
+    font-family 'baskerville Old Face'
+    font-size 1.2em
+    margin-top 2%
+    margin-bottom 5%
     
-    button
-        col(1/2)
-        shift(1/2)
-        font-size 1.75em
-        font-family 'futura'
-        background secondaryColor
-        text-align center
-        color white
-        border none
-        border-bottom 3px darkColor solid
-        border-radius 5px
+  button
+    col(1/2)
+    shift(1/2)
+    font-size 1.75em
+    font-family 'futura'
+    background secondaryColor
+    text-align center
+    color white
+    border none
+    border-bottom 3px darkColor solid
+    border-radius 5px
     
     
 // REPEATING DIVS
-.repeatContent
-    col(1/3)
-    width 33%
-    display inline-block
-    position relative
-    background mainColor
-    top 100px
-    margin-bottom 2%
-    +below(800px)
-        stack()
-        
-    h2
-        col(1/1)
-        color white
-        font-size 1.5em
-    h4  
-        col(1/1)
-        font-size 1em
-        color white
-        margin-top 0
-    // a
-    //     font-size 1.3em
-    //     text-align right
-    //     color white
-    //     text-decoration none
-        
-   
-        
-.rubricTitle
-    font-family primaryFont
-    font-size 1.5em
-    margin-bottom 2%
+.repeatContainer
+  col(1/1)
     
-.rubricAcronym
+.repeatContent
+  col(1/3, cycle:3)
+  border-radius 5px
+  position relative
+  background mainColor
+  top 100px
+  margin-bottom 2%
+        
+  h2
+    col(1/1)
+    padding 2%
+    color white
+    font-size 1.5em
     font-family primaryFont
+    margin-bottom 1.5%
+  h4  
+    col(1/1)
+    padding 2%
     font-size 1em
+    color white
+    margin-top 0
+    font-family primaryFont
+
+    // div 
+    //     padding 10px
+        
+.actionButtons
+  col(1/3)
+  shift(2/3)
+  padding 2%
+  
+  a 
+    color gray
+    font-family secondaryFont
+    font-size 1.2em
+    
+  a:nth-child(2)
+    margin-left 10px
+        
+.wrapper
+  margin-top 100px
+    
