--- a/assets/views/editDegree.html
+++ b/assets/views/editDegree.html
@@ -1,3 +1,3 @@
-<gen-form data-payload="dashboardFormData" data-callback="actionAdd()"></gen-form>
+<gen-form data-payload="dashboardUpdateFormData" data-callback="actionAdd()"></gen-form>
 
 
