--- a/assets/views/dashboard.html
+++ b/assets/views/dashboard.html
@@ -2,7 +2,6 @@
     
     <gen-form data-payload="dashboardFormData" data-callback="actionAdd()"></gen-form>
 
-
     <div class='wrapper'>
 
         <div class="repeatContainer">
@@ -13,8 +12,12 @@
                     </div>
                     <h2>{[{x.acronym}]}</h2>
                     <h4>{[{x.title}]}</h4>
+
+                <a href="#/course/add/{[{x._id}]}">Add a Course</a>
+            
+
+            </div>
             </div>
         </div>
             
      </div>
-    
