--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -21,8 +21,8 @@
 	 	<div class='navigation'>
 			<ul>
 			<li class='search'><input type="search" ng-model="q" aria-label="filter degrees" placeholder='Search' /></li>
-				<li><a href="#">Degree</a></li>
-				<li><a href="#">Class</a></li>
+				<li><a href="#/">Degree</a></li>
+				<li><a href="#/course">Class</a></li>
 			</ul>
 		</div>
 	</div>
