--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -12,7 +12,7 @@ secondaryFont = 'baskerville Old Face'
 edit()
 
 body
-  margin 0 1%
+  margin 0
     
 html
   +below(800px)
@@ -41,9 +41,9 @@ html
   
   .search
     input
-      font-size 2em
       background white
-      padding 2% 0
+      width 100%
+      font-size 2em
     
   li
     col(1/3)
@@ -51,6 +51,7 @@ html
     color white
     font-family primaryFont
     font-size 1.2em
+    text-align center
     padding 2% 0
     margin-right 0px
     
@@ -108,12 +109,17 @@ html
     font-size 1.75em
     font-family 'futura'
     background secondaryColor
+    padding 2% 0
     text-align center
     color white
     border none
     border-bottom 3px darkColor solid
     border-radius 5px
     
+  button:hover
+    margin-top 3px
+    background darkColor
+    border-bottom none
     
 // REPEATING DIVS
 .repeatContainer
@@ -124,9 +130,18 @@ html
   border-radius 5px
   position relative
   background mainColor
-  top 100px
+  top 50px
   margin-bottom 2%
-        
+  
+  a
+    text-decoration none
+    color gray
+    font-family secondaryFont
+    font-size 1.2em
+    
+  a:hover
+    color #FFF
+
   h2
     col(1/1)
     padding 2%
@@ -143,23 +158,28 @@ html
     margin-top 0
     font-family primaryFont
 
-    // div 
-    //     padding 10px
-        
-.actionButtons
-  col(1/3)
-  shift(2/3)
-  padding 2%
-  
-  a 
-    color gray
+  p
+    col(1/1)
+    padding 2%
+    font-size 1em
+    color white
+    margin-top 0
     font-family secondaryFont
-    font-size 1.2em
-    margin-left 15px
-    
-  a:hover
-    color #FFF
         
+  .actionButtons
+    col(1/1)
+    padding 2%
+  
+    a
+      col(1/5)
+      color gray
+      font-family secondaryFont
+      font-size 1.2em
+      text-decoration none
+    
+    a:hover
+      color #FFF
+    
 .wrapper
   margin-top 100px
     
